--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -57,6 +57,11 @@
                                 </table>
                             </div>
                         </div>
+                        <script>
+                            window.onload = function() {
+                                alert("Вы успешно вошли в систему!");
+                            };
+                        </script>
                     </div>
                 </div>
             </div>
