--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control" id=lastName th:field="*{last_name}" required>
         </div>
         <div class="mb-3">
-            <label for="email" class="form-label">Username</label>
+            <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" id=email th:field="*{username}" required>
         </div>
         <div class="mb-3">
